--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "node-sass": "^0.9.3",
+    "passport": "^0.2.0",
     "pg": "^3.4.0",
     "static-favicon": "~1.0.0"
   }
