--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "node-env-file": "^0.1.3",
     "node-sass": "^0.9.3",
     "passport": "^0.2.0",
     "pg": "^3.4.0",
+    "pusher": "^1.0.0",
     "static-favicon": "~1.0.0"
   }
 }
