--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^0.4.0",
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
-    "node-env-file": "^0.1.3",
     "node-sass": "^0.9.3",
     "passport": "^0.2.0",
     "pg": "^3.4.0",
-    "pusher": "^1.0.0",
+    "socket.io": "^1.0.6",
     "static-favicon": "~1.0.0"
   }
 }
